# nellos-kernel

./: Cargo.toml  README.md  kernel.ld  x86_64-nell-kernel.json  x86_64-none-kernel-nabi.json
.cargo/: config.toml
src/: cpu.rs  dis.rs  main.rs  tty.rs  vga.rs
src/acpi/: mod.rs
src/acpi/ca/: mod.rs  osl.rs  wrap.rs
src/arch/: mod.rs
src/arch/x86_64/: interrupt.rs  ioapic.rs  isr.rs  mod.rs  msr.rs  port.rs
src/arch/x86_64/desctable/: gdt.rs  idt.rs  mod.rs  sel.rs  ty.rs
src/mem/: addr.rs  kernel_mem_map.rs  mod.rs
src/mem/phys/: buck.rs  mod.rs
src/mem/virt/: mem_map.rs  mod.rs  page_table.rs
src/syscall/: mod.rs
src/uefi/: boot_alloc.rs  mod.rs
