[package]
name = "kernel"
version = "0.1.0"
authors = ["Jan Katzer <jan@katzer.dev>"]
edition = "2018"

#[lib]
#crate-type = ["staticlib"]

[profile.dev]
opt-level = 0
debug = 2

[dependencies]
newefi = {path = "../libs/newefi/"}
prebootlib = {path = "../libs/prebootlib/"}
fallo = {path = "../../fallo/"}
cfg-if = "1.0.0"
