[package]
name = "kernel"
version = "0.1.0"
authors = ["Jan Katzer <jan@katzer.dev>"]
edition = "2018"

#[lib]
#crate-type = ["staticlib"]

[profile.dev]
opt-level = 0
debug = 2

[dependencies]
newefi = {path = "../libs/newefi/"}
prebootlib = {path = "../libs/prebootlib/"}
acpica_sys = {path = "../libs/acpica_sys/"}
fallo = {path = "../../fallo/"}
atomic = "0.5.0"
uefi_rs = {package = "uefi", version = "0.7.0", default-features = false, features = []}
cfg-if = "1.0.0"
cty = "0.2.1"
