[package]
name = "kernel"
version = "0.1.0"
authors = ["Jan Katzer <jan@katzer.dev>"]
edition = "2018"

#[lib]
#crate-type = ["staticlib"]

[profile.dev]
opt-level = 1
debug = 2
# panic = "abort" is already specified in x86_64-nell-kernel.json

[dependencies]
newefi = {path = "../libs/newefi"}
prebootlib = {path = "../libs/prebootlib"}
acpica_sys = {path = "../libs/acpica_sys"}
fallo = {path = "../../fallo"}
atomic = "0.5.0"
uefi_rs = {package = "uefi", version = "0.18.0", default-features = false, features = []}
cfg-if = "1.0.0"
cty = "0.2.1"
byteorder = {version = "1.4.2", default-features = false}
numtoa = "0.2.3"
bitfield = "0.13.2"
#zydis = "3.1.1"
static_assertions = "1.1.0"
memoffset = "0.8.0"
